--- a/css/styles.css
+++ b/css/styles.css
@@ -41,7 +41,7 @@ body{
 }
 
 .menu a:hover{
-    background-color: #EA99D5;
+    background-color: #FFE6E6;
     border-radius: 5px;
 }
 .nav li{
@@ -61,7 +61,6 @@ body{
         background-color: #6155A6;
         border-radius: 5px;
 }
-
 
 /* USANDO BOOTSTRAP PARA EL INDEX Y LA SECCION "NOSOTROS" */
 
@@ -84,7 +83,6 @@ body{
     margin-right: 50px;
 }
 
-
 .aside__image{
     display: block;
     max-width: 100%;
@@ -93,12 +91,9 @@ body{
     margin-left: auto;
     margin-right: auto;
 }
-
 .form--fondo{
     background-color:rgb(243, 230, 207);
 }
-
-
 
 .iframe__ubicacion{
     margin-top: 50px;
@@ -108,6 +103,7 @@ body{
 
 /* FOOTER */
 .footer{
+    width: 100%;
     background-color:rgb(243, 230, 207);  
     margin-top: auto;
     text-align: center;
